<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_watchlist">

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.example.cryptocompareclone.ui.watchlist.WatchListFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_portfolio"
        android:name="com.example.cryptocompareclone.ui.portfolio.PortFolioFragment"
        android:label="@string/title_portfolio"
        tools:layout="@layout/fragment_portfolio" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.cryptocompareclone.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>